--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -66,3 +66,98 @@
 .menu-icon {
   display: none
 }
+
+@media screen and (max-width: 960px) {
+  .NavbarItems {
+    position: relative;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 230px;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    justify-content: flex-start;
+    border-bottom-left-radius: 45px;
+    border-bottom-right-radius: 45px;
+    margin-top: 0px;
+  }
+
+
+  .nav-menu.active{
+    background: rgba(78,130,193,1);
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index : 1;
+    padding-inline-start: 0px;
+  }
+
+  .nav-links{
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 100%;
+    display:table;
+  }
+
+  .nav-links:hover {
+    background-color: rgb(42,153,212) ;
+    border-radius:  0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top :0;
+    left: 0;
+    transform: translate(30%,0%);
+    margin-left: 0px;
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times{
+    color: white;
+    font-size: 2rem;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    padding: 0.5rem 1rem;
+    margin: 1rem auto;
+    border-radius: 4px;
+    width: 60%;
+    background: rgba(16,170,226,1) ;
+    text-decoration: none;
+    color: white;
+    font-size: 1.1rem;
+    border-radius: 15px;
+  }
+
+  .nav-links-mobile:hover {
+    background: rgb(42,153,212);
+    color: white;
+    transition: 250ms;
+  }
+
+
+
+  Button {
+    display: none;
+  }
+
+}
